--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,8 @@
 @import url('/stylesheets/_home-page.css');
 @import url('/stylesheets/_header.css');
 @import url('/stylesheets/_footer.css');
-
+@import url('/stylesheets/_product.css');
+@import url('/stylesheets/_add-to-cart.css');
 html{
   
   box-sizing: border-box;
@@ -16,8 +17,9 @@ body {
   padding:0;
   margin:0 auto;
   font-family: 'Manrope', sans-serif;
-  color:#FFFFFF;
+  color:#000;
   max-width:600px;
+  overflow-x: hidden;
 }
 
 
