--- a/views/_home-page.pug
+++ b/views/_home-page.pug
@@ -3,7 +3,7 @@
   h3.intro-text NEW PRODUCT 
   h1.leading-text XX99 MARK II HEADPHONES 
   p.sub-text Experience natural, lifelike audio and exceptional build quality made for the passionate music enthusiast.
-  button.homepage-button SEE PRODUCT
+  button.homepage-button.see-product-button SEE PRODUCT
 .product-preview 
  img.headphones(src='/images/product-xx99-mark-one-headphones/mobile/image-category-page-preview_ccexpress.png', alt='image of headphones')
  .headphones-preview-container.preview-containers 
@@ -32,12 +32,12 @@
  h2.zx7-speaker ZX7 SPEAKER 
  button.zx7-button SEE PRODUCT 
 .black-earphones-case 
- img.black-earphones-case-picture(src='/images/mobile/image-earphones-yx1.jpg')
+ img.black-earphones-case-picture(src='/images/mobile1/image-earphones-yx1.jpg')
 .yx1-earphone-card 
  h2.yx1-header YX1 EARPHONES 
  button.yx1.see-product-button SEE PRODUCT
 .card.home-page-man-picture 
- img.card-img-top(src='/images/shared/mobile/image-best-gear.jpg')
+ img.card-img-top(src='/images/shared/mobile2/image-best-gear.jpg')
  .card-body.conten-holder 
   h2.card-title.content-header BRINGING YOU THE #[span BEST] AUDIO GEAR
   p.card-text.content-text Located at the heart of New Your City, Audiophile is the premier store for high end headphones, earphones, speakers, and audio accessories. We have a large showroom and luxury demostration rooms availabel for you to browse and experience a wide ranfe of our products. Stop by our store to meet some of the fantastic people who make Audiophile the best place to buy your portable audio equipment.
