create checkout page

--- a/public/stylesheets/_add-to-cart.css
+++ b/public/stylesheets/_add-to-cart.css
@@ -57,7 +57,7 @@
  letter-spacing: 1px;
  margin-top:3rem;
  margin-left: 5%;
- margin-bottom: 2rem;
+ margin-bottom: 1.4rem;
 }
 .feature-text{
  font-weight: 500;
@@ -65,7 +65,7 @@
  opacity: 0.5;
  width: 90%;
  margin: auto;
- padding-bottom: 2rem;
+ padding-bottom: 1.4rem;
  padding-right: 1.9rem;
 }
 .shopping-bag-content{
@@ -76,8 +76,8 @@
  font-size: 24px;
  letter-spacing: 1px;
  margin-left: 5%;
- margin-bottom: 2rem;
- margin-top: 4rem;
+ margin-bottom: 1.4rem;
+ margin-top: 2rem;
 }
 .amount{
  font-size:15px;
@@ -85,8 +85,11 @@
  font-weight: 700;
  color: #D87D4A;
  display: inline-block;
- padding:4px 1.3rem 4px 0;
+ padding:2px 1.3rem 4px 0;
  
+}
+.box-content{
+ margin-bottom: 4rem;
 }
 .content{
  font-size:15px;
@@ -95,3 +98,39 @@
  opacity: 0.5;
  font-weight: 500;
 }
+.cart-shared-pictures img{
+ display: block;
+ width: 90%;
+ border-radius: 7px;
+ margin: 1rem auto;
+} 
+.shard-black-headphone{
+ display: block;
+ padding-bottom: 20%;
+}
+.things-you-may-like-header, .things-you-may-like-brand-name
+{
+ font-weight: bold;
+ font-size: 24px;
+ text-align: center;
+ padding-bottom: 5%;
+}
+.things-you-may-like img{
+ display: block;
+ width: 90%;
+ margin: auto;
+ border-radius: 7px;
+
+}
+.things-you-may-like {
+ position: relative;
+}
+.things-you-may-like-brand-name{
+ padding-top: 10%;
+}
+.button-container{
+ display:flex;
+ justify-content: center;
+ padding-bottom: 10%;
+}
+
