--- a/public/stylesheets/checkout.css
+++ b/public/stylesheets/checkout.css
@@ -10,12 +10,13 @@
 .checkout-outermost-container {
  background-color: #f2f2f2;
  padding-top: 10px;
+ padding-bottom:40px;
 }
 .checkout-form-wrapper{
  padding-top: 30px;
  margin:0 auto;
 }
-.firstbox{
+.firstbox, .second-box{
  width: 90%;
  margin: 0 auto;
  background-color:#fff;
@@ -56,4 +57,146 @@ input{
 input[type=number]{
   -webkit-appearance: none;
  -moz-appearance: textfield !important; 
+}
+.payment-details{
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 25px;
+  color:#D87D4A;
+  letter-spacing: 1px;
+
+}
+.payment-method{
+  font-size: 12px;
+  font-weight: bold;
+  padding-bottom: 10px;
+
+}
+.payment-info {
+  padding-top: 20px;
+}
+.button-input,.button-label {
+  display: inline-block;
+}
+.cash-on-delivery, .eMoney{
+  display: flex;
+  gap: 10px;
+  align-items: center
+}
+.eMoney{
+  border: 1px solid #D87D4A; 
+}
+::placeholder{
+  font-size: 14px;
+  font-weight: bold;
+  opacity: 0.8;
+}
+/* [type='radio']{
+  
+ transform: scale(1.5);
+} */
+input[type="radio"] {
+  /* remove standard background appearance */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  /* create custom radiobutton appearance */
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  padding: 4px;
+  /* background-color only for content */
+  background-clip: content-box;
+  border: 1px solid rgba(187, 187, 187, 0.5);
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+/* appearance for checked radiobutton */
+input[type="radio"]:checked {
+  background-color: #D87D4A;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
+.second-box{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.image-box-checkout{
+  display: flex;
+  flex-direction: row;
+}
+.image-box-checkout img{
+  display: inline-block;
+  width : 80px;
+  height : 80px;
+  margin-bottom: 20px;
+  border-radius: 7px;
+
+}
+.text-for-checkout-summary{
+  padding-top: 10px;
+  padding-left: 20px;
+}
+.text-for-checkout-summary h6{
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 25px;
+
+}
+.text-for-checkout-summary p{
+  font-size: 14px;
+  opacity: 0.5;
+  font-weight: bold;
+}
+.summary-amount-num p{
+  text-align: right;
+  opacity: 0.5;
+  font-weight: bold;
+  font-size: 15px;
+  padding-top: 10px;
+}
+.summary-shipping-cost p, .grand-total {
+  text-align: right;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 25px;
+
+}
+.summary-lower-texts p{
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 25px;
+  opacity: 0.5;
+
+}
+.submit{
+  margin-left: 15%;
+  margin-top: 6%;
+
+}
+.grand-total p{
+  color: #D87D4A;
+  
+}
+.summary.last.row{
+  padding-top: 15px;
+}
+.summary-header{
+  font-size: 18px; 
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding-bottom: 15px;
+  padding-top: 20px;
 }
