remove password from env

--- a/public/stylesheets/_home-page.css
+++ b/public/stylesheets/_home-page.css
@@ -294,3 +294,10 @@
   font-size: 28px;
   
 }
+
+@media only screen and (min-width: 600px) {
+.blackbackground-headphone-image{ 
+ background-image: url(/images/tablet-home/image-header.jpg)
+}
+
+}
