--- a/views/_header.pug
+++ b/views/_header.pug
@@ -55,7 +55,7 @@
           .col-sm-6.col-10
             button.see-product-button.checkout-button-cart(type='button' data-bs-dismiss='modal') CHECKOUT
 header#phone-nav-container
- nav.navbar.navbar-expand-lg.phone-nav.navbar-dark
+ nav.navbar.navbar-expand-xxl.phone-nav.navbar-dark
   button.navbar-toggler(type='button', data-toggle='collapse', data-bs-target='#navmenu' data-bs-toggle='collapse')
    span.navbar-toggler-icon.harmburger-menu 
   a.navbar-brand.brand-name(href='#') audiophile 
