--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;500;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 @import url('/stylesheets/_home-page.css');
 @import url('/stylesheets/_header.css');
@@ -21,7 +21,13 @@ body {
   color:#000;
   max-width:600px;
   overflow-x: hidden;
+  width: 80%;
 }
-
+@media only screen and (min-width: 610px){
+body{
+  
+  max-width: 800px;
+}
+}
 
 
