--- a/public/stylesheets/_home-page.css
+++ b/public/stylesheets/_home-page.css
@@ -25,7 +25,7 @@
 }
 .intro-text{
  font-weight: 400;
- font-size: 14px;
+ font-size: 18px;
  line-height:19px;
  letter-spacing:12px;
  opacity: 0.5;
@@ -42,7 +42,7 @@
  padding-bottom: 1rem;
 }
 .sub-text{
- font-size: 15px;
+ font-size: 16px;
  font-weight: 400;
  line-height: 30px;
  opacity:.65;
@@ -54,7 +54,7 @@
  height:48px;
  border: 1px solid transparent;
  background-color: #D87D4A;
- font-size: 13px;
+ font-size: 16px;
  font-weight: bold;
  line-height: 18px;
  color: #fff;
@@ -76,7 +76,7 @@
 
 .preview-containers{
  width:90%;
- height: 185px;
+ height: 80%;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 7rem;
@@ -111,7 +111,7 @@
 }
 .preview-headers{
  font-weight: bold;
- font-size:15px;
+ font-size:18px;
  line-height: 20px;
  text-align: center;
  color:#000;
@@ -119,7 +119,7 @@
 }
 .preview-anchor{
  font-weight: bold;
- font-size: 13px;
+ font-size: 16px;
  line-height:18px;
  letter-spacing: 1px;
  font-style: normal;
@@ -220,7 +220,7 @@
  height: 50px;
  margin-left: 5%;
  font-weight:700;
- font-size: 13px;
+ font-size: 16px;
  border: 1px solid black;
  background-color:transparent;
 }
