--- a/public/stylesheets/_home-page.css
+++ b/public/stylesheets/_home-page.css
@@ -5,7 +5,7 @@
 
  background-color: #191919;
  height: 83vh;
- width:100%;
+ width:100vw;
  background-image: url(/images/mobile1/image-header.jpg);
  background-size: cover;
  background-position: bottom center;
