--- a/public/stylesheets/_header.css
+++ b/public/stylesheets/_header.css
@@ -24,6 +24,9 @@
 .nav-link{
  font-size:1rem !important;
 }
+.nav-bar-size{
+  width:100% !important;
+}
 /*Add to Cart css*/
 .cart-images{
  display:flex;
