--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,11 +19,11 @@ body {
   margin:0 auto;
   font-family: 'Manrope', sans-serif;
   color:#000;
-  max-width:600px;
+  max-width:670px;
   overflow-x: hidden;
-  width: 100%;
+  width: 650px;
 }
-@media only screen and (min-width: 610px){
+@media only screen and (min-width: 650px){
 body{
   
   max-width: 800px;
