--- a/public/stylesheets/_home-page.css
+++ b/public/stylesheets/_home-page.css
@@ -93,23 +93,23 @@
 .headphones{
  width: auto;
  height:130px;
- /* bottom: 75%;
+ bottom: 75%;
  bottom: 84%;
- left: 38%; */
+ left: 38%;
  
 }
 .speakers{
  width: auto;
  height:170px;
- /* bottom: 48%;
- left:33%; */
+ bottom: 48%;
+ left:33%;
 
 }
 .earphones{
  width: auto;
  height: 150px;
- /* bottom: 15%;
- left: 35%; */
+ bottom: 15%;
+ left: 35%;
  
 }
 .preview-headers{
