--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ body {
   color:#000;
   max-width:600px;
   overflow-x: hidden;
-  width: 600px;
+  width: 100vw;
 }
 @media only screen and (min-width: 620px){
 body{
