--- a/public/stylesheets/_home-page.css
+++ b/public/stylesheets/_home-page.css
@@ -13,6 +13,7 @@
  display: flex;
  justify-content: center;
  align-items: center;
+ min-height: max-content;
 }
 .megatron-text-container {
  color: #fff;
