--- a/public/stylesheets/_home-page.css
+++ b/public/stylesheets/_home-page.css
@@ -4,7 +4,7 @@
 .blackbackground-headphone-image{
 
  background-color: #191919;
- height: 70vh;
+ height: auto;
  width:100%;
  background-image: url(/images/mobile1/image-header.jpg);
  background-size: cover;
@@ -13,7 +13,7 @@
  display: flex;
  justify-content: center;
  align-items: center;
- min-height: max-content;
+ min-height: 70vh;
 }
 .megatron-text-container {
  color: #fff;
