--- a/public/stylesheets/_home-page.css
+++ b/public/stylesheets/_home-page.css
@@ -154,9 +154,11 @@
  border-radius: 50%;
  border: 1px solid rgba(241, 240, 239, 0.2);
  position: absolute;
- right: 1%;
- left:1%;
- text-align: center;
+ right: 0%;
+ left:0%;
+ margin-left: auto; 
+  margin-right: auto;
+ 
 }
 .inner-circle {
  width: 380px;
@@ -303,5 +305,35 @@
 body{
   width: 800px;
   max-width: 800px;
+}
+.product-preview{
+  display: flex;
+  gap: 8px;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+.product-preview img{
+  position: absolute;
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 150px;
+}
+.headphones{
+  right: 60%;
+  left: 0;
+  top: 0;
+  bottom: 2px;
+}
+.speakers{
+  bottom: 50%;
+  left:  40%;
+
+}
+.earphones{
+  left: 70%;
+  bottom:50%;
+}
+.preview-containers{
+  margin-bottom: 3rem;
 }
 }
