--- a/public/stylesheets/_footer.css
+++ b/public/stylesheets/_footer.css
@@ -26,7 +26,7 @@
 .footer-nav-links ul{
  margin-bottom: 3rem;
  width: 100%;
- text-align: center;
+ 
 }
 .footer-nav-links li{
  margin-top: 1.5rem;
@@ -61,4 +61,30 @@
  margin-right: 1.3rem;
  margin-bottom: 2rem;
  color: white;
+}
+@media only screen and (min-width: 600px){
+  .footer-container{
+    text-align: left;
+    padding-left: 5%;
+    padding-bottom: 10px;
+  }
+ .footer-colored-line {
+   margin-left: 0;
+ }
+ .footer-nav-links li{
+   display: inline-block;
+   
+ }
+ 
+ .footer-sub-text{
+   width: 100%;
+   padding-right: 5%;
+ }
+ .footer-list-items{
+   padding-left: 0;
+ }
+  .footer-copyright-container{
+    display: flex;
+    justify-content:space-between;
+  }
 }
