--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -12,14 +12,17 @@
     li
       a(href="#") EARPHONES 
  p.footer-sub-text Audiophile is an all in one stop to fulfill your audio needs. We're a small team of music lovers and sound specialists who are devoted to helping yu get the most out of personal audio. Come and visit our demo facility - we're open 7 days a week.
- h6.footer-copyright-text Copyright 2022. All Rights Reserved.
- span.font-awesome-social-media-icons
-  i.fab.fa-facebook-square
- span.font-awesome-social-media-icons
-  i.fab.fa-twitter 
- span.font-awesome-social-media-icons  
-  i.fab.fa-instagram    
-  
+ .footer-copyright-container
+  .copyright-container
+   h6.footer-copyright-text Copyright 2022. All Rights Reserved.
+  .social-media-container
+    span.font-awesome-social-media-icons
+      i.fab.fa-facebook-square
+    span.font-awesome-social-media-icons
+      i.fab.fa-twitter 
+    span.font-awesome-social-media-icons  
+      i.fab.fa-instagram    
+      
 
   
   
